@@ -1,5 +1,0 @@
-IBus means an Intelligent Input Bus.
-It provides full featured and user friendly input method user interface.
-It also may help developers to develop input method easily.
-
-This package provide Python library for IBus.
