@@ -1,106 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2018/04/28 01:40:07 tsutsui Exp $
-${PYSITELIB}/ibus/__init__.py
-${PYSITELIB}/ibus/__init__.pyc
-${PYSITELIB}/ibus/__init__.pyo
-${PYSITELIB}/ibus/_config.py
-${PYSITELIB}/ibus/_config.pyc
-${PYSITELIB}/ibus/_config.pyo
-${PYSITELIB}/ibus/_gtk.py
-${PYSITELIB}/ibus/_gtk.pyc
-${PYSITELIB}/ibus/_gtk.pyo
-${PYSITELIB}/ibus/application.py
-${PYSITELIB}/ibus/application.pyc
-${PYSITELIB}/ibus/application.pyo
-${PYSITELIB}/ibus/ascii.py
-${PYSITELIB}/ibus/ascii.pyc
-${PYSITELIB}/ibus/ascii.pyo
-${PYSITELIB}/ibus/attribute.py
-${PYSITELIB}/ibus/attribute.pyc
-${PYSITELIB}/ibus/attribute.pyo
-${PYSITELIB}/ibus/bus.py
-${PYSITELIB}/ibus/bus.pyc
-${PYSITELIB}/ibus/bus.pyo
-${PYSITELIB}/ibus/common.py
-${PYSITELIB}/ibus/common.pyc
-${PYSITELIB}/ibus/common.pyo
-${PYSITELIB}/ibus/component.py
-${PYSITELIB}/ibus/component.pyc
-${PYSITELIB}/ibus/component.pyo
-${PYSITELIB}/ibus/config.py
-${PYSITELIB}/ibus/config.pyc
-${PYSITELIB}/ibus/config.pyo
-${PYSITELIB}/ibus/engine.py
-${PYSITELIB}/ibus/engine.pyc
-${PYSITELIB}/ibus/engine.pyo
-${PYSITELIB}/ibus/enginedesc.py
-${PYSITELIB}/ibus/enginedesc.pyc
-${PYSITELIB}/ibus/enginedesc.pyo
-${PYSITELIB}/ibus/exception.py
-${PYSITELIB}/ibus/exception.pyc
-${PYSITELIB}/ibus/exception.pyo
-${PYSITELIB}/ibus/factory.py
-${PYSITELIB}/ibus/factory.pyc
-${PYSITELIB}/ibus/factory.pyo
-${PYSITELIB}/ibus/inputcontext.py
-${PYSITELIB}/ibus/inputcontext.pyc
-${PYSITELIB}/ibus/inputcontext.pyo
-${PYSITELIB}/ibus/interface/__init__.py
-${PYSITELIB}/ibus/interface/__init__.pyc
-${PYSITELIB}/ibus/interface/__init__.pyo
-${PYSITELIB}/ibus/interface/iconfig.py
-${PYSITELIB}/ibus/interface/iconfig.pyc
-${PYSITELIB}/ibus/interface/iconfig.pyo
-${PYSITELIB}/ibus/interface/iengine.py
-${PYSITELIB}/ibus/interface/iengine.pyc
-${PYSITELIB}/ibus/interface/iengine.pyo
-${PYSITELIB}/ibus/interface/ienginefactory.py
-${PYSITELIB}/ibus/interface/ienginefactory.pyc
-${PYSITELIB}/ibus/interface/ienginefactory.pyo
-${PYSITELIB}/ibus/interface/iibus.py
-${PYSITELIB}/ibus/interface/iibus.pyc
-${PYSITELIB}/ibus/interface/iibus.pyo
-${PYSITELIB}/ibus/interface/iinputcontext.py
-${PYSITELIB}/ibus/interface/iinputcontext.pyc
-${PYSITELIB}/ibus/interface/iinputcontext.pyo
-${PYSITELIB}/ibus/interface/inotifications.py
-${PYSITELIB}/ibus/interface/inotifications.pyc
-${PYSITELIB}/ibus/interface/inotifications.pyo
-${PYSITELIB}/ibus/interface/ipanel.py
-${PYSITELIB}/ibus/interface/ipanel.pyc
-${PYSITELIB}/ibus/interface/ipanel.pyo
-${PYSITELIB}/ibus/keysyms.py
-${PYSITELIB}/ibus/keysyms.pyc
-${PYSITELIB}/ibus/keysyms.pyo
-${PYSITELIB}/ibus/lang.py
-${PYSITELIB}/ibus/lang.pyc
-${PYSITELIB}/ibus/lang.pyo
-${PYSITELIB}/ibus/lookuptable.py
-${PYSITELIB}/ibus/lookuptable.pyc
-${PYSITELIB}/ibus/lookuptable.pyo
-${PYSITELIB}/ibus/modifier.py
-${PYSITELIB}/ibus/modifier.pyc
-${PYSITELIB}/ibus/modifier.pyo
-${PYSITELIB}/ibus/notifications.py
-${PYSITELIB}/ibus/notifications.pyc
-${PYSITELIB}/ibus/notifications.pyo
-${PYSITELIB}/ibus/object.py
-${PYSITELIB}/ibus/object.pyc
-${PYSITELIB}/ibus/object.pyo
-${PYSITELIB}/ibus/observedpath.py
-${PYSITELIB}/ibus/observedpath.pyc
-${PYSITELIB}/ibus/observedpath.pyo
-${PYSITELIB}/ibus/panel.py
-${PYSITELIB}/ibus/panel.pyc
-${PYSITELIB}/ibus/panel.pyo
-${PYSITELIB}/ibus/property.py
-${PYSITELIB}/ibus/property.pyc
-${PYSITELIB}/ibus/property.pyo
-${PYSITELIB}/ibus/serializable.py
-${PYSITELIB}/ibus/serializable.pyc
-${PYSITELIB}/ibus/serializable.pyo
-${PYSITELIB}/ibus/text.py
-${PYSITELIB}/ibus/text.pyc
-${PYSITELIB}/ibus/text.pyo
-${PYSITELIB}/ibus/utility.py
-${PYSITELIB}/ibus/utility.pyc
-${PYSITELIB}/ibus/utility.pyo
